syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.quick.sparrow.service";
option java_outer_classname = "SparrowProto";
option objc_class_prefix = "Sp";

package sparrow;

service Messenger {
  // React on message post
  rpc React (MessageRequest) returns (MessageReply) {}
  rpc GetMessages (MessagesRequest) returns (MessagesResponse) {}
}

message MessageRequest {
  string message = 1;
  string address = 2;
  string clientId = 3;
  string token = 4;
}

message MessageReply {
  string message = 1;
  string address = 2;
}

message MessagesRequest {
  string clientId = 2;
  string token = 3;
}

message MessagesResponse {
  ListOfStrings messages = 1;
}

message ListOfStrings {
    repeated string strings = 1;
}
